upgraded gradle to 8.4

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,6 @@ repositories {
 }
 
 dependencies {
-    // https://mvnrepository.com/artifact/commons-cli/commons-cli
-    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+    implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
 }
 
