--- a/build.gradle
+++ b/build.gradle
@@ -16,5 +16,6 @@ repositories {
 
 dependencies {
     implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.14.0'
 }
 
